--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,6 +12,7 @@
 				"redhat.vscode-yaml",
 				"ms-azuretools.vscode-docker",
 				"ms-vscode-remote.remote-wsl",
+				"ms-toolsai.datawrangler",
 				"ms-vscode.remote-explorer",
 				"ms-vscode-remote.vscode-remote-extensionpack",
 				"ms-vscode.remote-server",
